<resources>
    <string name="app_name">JAGA</string>
    <string name="guitar_tuner">Tuner</string>
    <string name="settings">Settings</string>
    <string name="music_list_search">Search by artist, title..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_song_chords">ChordsActivity</string>
    <string name="no_songs_available">No songs available :/</string>
    <string name="interval_text">Scroll interval</string>
    <string name="favourite_add">Added to favourites!</string>
    <string name="favourite_remove">Removed from favourites</string>
    <string name="tooltip">Tooltip</string>
    <string name="dialog">Dialog window</string>
    <string name="english">English</string>
    <string name="croatian">Hrvatski</string>
    <string name="title_activity_tuner">TunerActivity</string>
    <string name="tune_g">G</string>
    <string name="tune_d">D</string>
    <string name="tune_a">A</string>
    <string name="tune_e">E</string>
    <string name="tune_b">B</string>
</resources>
